feat: support dynamic payment currencies
