# src/controllers/payment/GetPaymentsSummaryController.ts
@@ -1,6 +1,5 @@
 import { Controller, Get, Query, Route, Tags } from 'tsoa';
 import {
-  PaymentCurrency,
   PaymentStatus,
 } from '../../entities/Payment';
 import { PaymentFilters } from '../../gateway/Payment';
@@ -15,7 +14,7 @@ export class GetPaymentsSummaryController extends Controller {
   @Get('summary')
   public async getPaymentsSummary(
     @Query() status?: PaymentStatus,
-    @Query() currency?: PaymentCurrency,
+    @Query() currency?: string,
     @Query() course?: string,
     @Query() name?: string,
     @Query() email?: string,
